vpc.tf
resource "aws_vpc" "ahl-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "ahl-vpc"
  }
}
